# phpPlateSender

./: .gitignore  Makefile.am  README.md  bootstrap.sh  composer.json  config.php.in  configure.ac  daemon.php  default.php.in  logger.php  sender.php  utils.php  worker.php
distros/debian/: changelog  control  copyright  phpplatesender.dirs  phpplatesender.init  phpplatesender.postinst  phpplatesender.postrm  phpplatesender.service  phpplatesender.tmpfile  rules
lang/: Makefile.am  en_gb.php  fr_fr.php
misc/: phpplatesender.init.in  phpplatesender.service.in  phpplatesender.tmpfile.in
